Reto #2 completado y modificacion de readme