@@ -6,13 +6,10 @@ import java.util.Scanner;
 import java.util.stream.Collectors;
 
 public class Entrada {
-    public static List<Integer> listaNumerica () {
-        Scanner sc = new Scanner(System.in);
-        System.out.println("Escribe la lista de numeros seguidos por comas: ");
-        String listaNumerica = sc.nextLine();
-        String [] partes = listaNumerica.split(",");
-        List<Integer> numeros = Arrays.stream(partes).map(n-> Integer.parseInt(n.trim())).collect(Collectors.toList());
-
-        return numeros;
+        private Scanner sc = new Scanner(System.in);
+        public List<Integer> leerLista (int numeroLista) {
+                System.out.println("Escribe los numeros de la lista " + numeroLista + " separados por comas: ");
+                String entrada = sc.nextLine();
+                return Arrays.stream(entrada.split(",")).map(String::trim).map(Integer::parseInt).toList();
     }
 }
